Fix url Add arrows for collapsable Fix overflow of charts

--- a/report/48b49d70/static/css/report.css
+++ b/report/48b49d70/static/css/report.css
@@ -264,7 +264,7 @@ sup, sub
 .v-inline
 {
     display: inline;
-    vertical-align:top;
+    vertical-align: top;
 }
 
 .v-sec
@@ -426,3 +426,24 @@ sup, sub
 {
     visibility: visible;
 }
+
+.vizard-collapse
+{
+    background: url("../img/down.svg") no-repeat;
+    background-size: 20px 20px;
+    background-position: 100% 75%;
+    float: right;
+}
+
+.vizard-collapse-hide
+{
+    background-size: 0 0;
+    background-position: -9999px -9999px;
+}
+
+
+.vizard-metric-collapse
+{
+    max-width: calc(100% - 3rem);
+}
+
